# function-agent

./: .env.sample  .gitignore  README.md  env.py  evaluation_data.py  requirements.txt
function/: tools.py
function/calendar/: google_calendar.py  google_calendar_tools.py
function/crypto/: Binance_test.py  Upbit_test.py  llm_main.py  symbol_map_crypto.py
function/file_management/: file_embedding.py
function/mail-agent/: pyproject.toml
function/mail-agent/src/: main.py  test.py
function/mail_agent/: pyproject.toml
function/mail_agent/src/: main.py  quickstart.py  test.py
function/place/: naver_place.py  naver_place_gpt_example.py  naver_place_tools.py
function/search-agent/: pyproject.toml
function/search-agent/src/: main.py
function/search_agent/src/: main.py
function/shopping/: shopping-tools.py  shopping_tools.py
function/slack_agent/src/: main.py
function/stock/: main.py  stock_price.py  stockapi.py  symbol_map.py
function/tour/: kr_tour.py
function/weather/: weather.py  weather_tools.py
super-agent/src/: business_sub_agent.py  demo.py  evaluation.ipynb  evaluation.py  life_sub_agent.py  main.py  main3.py  search_sub_agent.py  stock_sub_agent.py  tools.py
super-agent/src/front/: frontend.py
super-agent/src/stock/: stock_price.py  symbol_map.py
