[project]
name = "ica-project1"
version = "0.1.0"
description = ""
authors = [
    {name = "000namc"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pymongo (>=4.12.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "openai (>=1.76.0,<2.0.0)",
    "gradio (>=5.27.1,<6.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "pysocks (>=1.7.1,<2.0.0)",
    "mpire (>=2.10.2,<3.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.25,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-api-python-client (>=2.173.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
